--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,5 +32,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Fiction'
 - !lcc 'PR'
+- GITenberg
 title: The Second Honeymoon
 url: http://www.gutenberg.org/ebooks/17446
